# rust-gameboy-emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  run-testing.sh
src/: _old_main.rs  cpu.rs  emulator.rs  error.rs  instructions.rs  main.rs  memory_bus.rs  ppu.rs  renderer.rs  rom.rs  unit_tests.rs
src/emulator/: cpu.rs  instructions.rs  memory_bus.rs  ppu.rs  unit_tests.rs
src/emulator/cpu/: alu.rs  control_flow.rs  helpers.rs  loads.rs
src/emulator/unit_tests/: alu.rs  instructions.rs
src/emulator/unit_tests/instructions/: bitwise.rs  load.rs
src/renderer/: gameboy_naive.wgsl  gameboy_pass.rs  gameboy_xbr.wgsl  wgpu_core.rs
src/unit_tests/: instructions.rs
src/unit_tests/instructions/: alu.rs
