[package]
name = "gameboy_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
bit_field = "0.10.1"
bytemuck = { version = "1.10.0", features = [ "derive" ] }
paste = "1.0.7"

tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["fmt"] }
tracing-log = { version = "0.1.3", features = ["env_logger"] }

egui = "0.18.1"

winit = "0.26.1"

pollster = "0.2"
wgpu = "0.13"
